manifest/objects/Apttus__DocAssemblyRuleset__c.object
<CustomObject>
    <description>Represents a rule set that contains a list of rules to determine the sections to include in a dynamic template.</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the ruleset is active</description>
        <inlineHelpText>Indicates whether the ruleset is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__BusinessObject__c</fullName>
        <description>The business object which provides the context for the ruleset</description>
        <inlineHelpText>The business object which provides the context for the ruleset</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                    <default>true</default>
                    <label>Apttus__APTS_Agreement__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ChildObject__c</fullName>
        <description>Type name of child business object like line item</description>
        <inlineHelpText>Type name of child business object like line item</inlineHelpText>
        <label>Child Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The description of the rule set</description>
        <inlineHelpText>The description of the rule set</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ParentReferenceField__c</fullName>
        <description>Field that relates the child object to the parent. This helps resolve multiple parent references</description>
        <inlineHelpText>Field that relates the child object to the parent. This helps resolve multiple parent references</inlineHelpText>
        <label>Parent Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RecordTypes__c</fullName>
        <description>Note: If you add a new agreement/quote record type, the type must also be manually added to this set of picklist values to keep record types in sync between agreements/quotes and templates.</description>
        <inlineHelpText>Note: If you add a new agreement/quote record type, the type must also be manually added to this set of picklist values to keep record types in sync between agreements/quotes and templates.</inlineHelpText>
        <label>Record Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The rule set evaluation sequence</description>
        <inlineHelpText>The rule set evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Doc Assembly Ruleset</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Assembly Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>